--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "remutable",
   "version": "3.0.1",
   "description": "Like Immutable, but actually mutable with diffs and versions.",
-  "main": "dist/remutable.js",
+  "main": "es5/index.js",
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+	"build": "babel src -d es5"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,16 @@
   },
   "homepage": "https://github.com/elierotenberg/remutable",
   "devDependencies": {
-    "babel": "^5.5.8",
-    "babel-eslint": "^3.1.15",
-    "babel-runtime": "^5.5.8",
+	"babel-core": "^6.4.0",
+	"babel-eslint": "^3.1.15",
+	"babel-plugin-syntax-async-functions": "^6.3.13",
+	"babel-plugin-transform-async-to-module-method": "^6.4.0",
+	"babel-plugin-transform-class-properties": "^6.4.0",
+	"babel-plugin-transform-object-assign": "^6.3.13",
+	"babel-preset-es2015": "^6.3.13",
+	"babel-preset-react": "^6.3.13",
+	"babel-register": "^6.3.13",
+	"babel-runtime": "^5.5.8",
     "eslint": "^0.23.0",
     "eslint-plugin-react": "^2.5.2",
     "gulp": "^3.9.0",
