--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,14 @@
 {
-	"presets": [
-		"es2015"
-	],
+	"presets": ["@babel/react", ["@babel/env", {"modules": false, "useBuiltIns": "entry", "targets": { "browsers": ["last 2 versions", "safari > 8", "not ie < 11"]}}]],
 	"plugins": [
-		["transform-async-to-module-method", {
-			"module": "bluebird",
-			"method": "coroutine"
-		}],
-		"syntax-async-functions",
-		"transform-class-properties",
-		"transform-object-assign"
-	]
+		"@babel/proposal-object-rest-spread",
+		"@babel/syntax-dynamic-import",
+		"@babel/proposal-class-properties",
+		"@babel/transform-flow-strip-types",
+	],
+	"env": {
+		"test": {
+			"plugins": ["transform-es2015-modules-commonjs"]
+		}
+	}
 }
