--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.0.1",
   "description": "Like Immutable, but actually mutable with diffs and versions.",
   "main": "es5/index.js",
+  "module": "src/index.jsx",
   "scripts": {
     "test": "gulp test",
 	"build": "babel src -d es5"
@@ -18,16 +19,15 @@
   },
   "homepage": "https://github.com/elierotenberg/remutable",
   "devDependencies": {
-	"babel-core": "^6.4.0",
-	"babel-eslint": "^3.1.15",
-	"babel-plugin-syntax-async-functions": "^6.3.13",
-	"babel-plugin-transform-async-to-module-method": "^6.4.0",
-	"babel-plugin-transform-class-properties": "^6.4.0",
-	"babel-plugin-transform-object-assign": "^6.3.13",
-	"babel-preset-es2015": "^6.3.13",
-	"babel-preset-react": "^6.3.13",
-	"babel-register": "^6.3.13",
-	"babel-runtime": "^5.5.8",
+    "@babel/core": "next",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.4",
+    "@babel/plugin-proposal-object-rest-spread": "next",
+    "@babel/plugin-syntax-dynamic-import": "next",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0-beta.4",
+    "@babel/plugin-transform-flow-strip-types": "^7.0.0-beta.4",
+    "@babel/preset-env": "^7.0.0-beta.4",
+    "@babel/preset-es2015": "^7.0.0-beta.4",
+    "@babel/preset-react": "^7.0.0-beta.4",
     "eslint": "^0.23.0",
     "eslint-plugin-react": "^2.5.2",
     "gulp": "^3.9.0",
@@ -36,10 +36,9 @@
     "gulp-plumber": "^1.0.1"
   },
   "dependencies": {
-    "bluebird": "^2.9.30",
     "crc-32": "^0.3.0",
     "immutable": "^3.7.3",
-    "lodash": "^3.9.3",
+    "lodash": "~4.14.0",
     "should": "^6.0.3"
   }
 }
