--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "es5/index.js",
   "scripts": {
     "test": "gulp test",
-	"build": "babel src -d es5"
+    "build": "babel src -d es5"
   },
   "repository": {
     "type": "git",
@@ -37,7 +37,7 @@
   "dependencies": {
     "crc-32": "^0.3.0",
     "immutable": "^3.7.3",
-    "lodash": "~4.14.0",
+    "lodash": "^4.17.4",
     "should": "^6.0.3"
   }
 }
