--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-	"presets": ["@babel/react", ["@babel/env", {"modules": false, "useBuiltIns": "entry", "targets": { "browsers": ["last 2 versions", "safari > 8", "not ie < 11"]}}]],
+	"presets": ["@babel/react", ["@babel/env", {"useBuiltIns": "entry", "targets": { "browsers": ["last 2 versions", "safari > 8", "not ie < 11"]}}]],
 	"plugins": [
 		"@babel/proposal-object-rest-spread",
 		"@babel/syntax-dynamic-import",
